🎨 Beautifying the base HTML with css

--- a/amazon-calculate.html
+++ b/amazon-calculate.html
@@ -7,7 +7,7 @@
     <title>Amazon Clone (Kinda)</title>
   </head>
   <body>
-    <div>
+    <div class="contents">
       <p>Amazon Shipping Calculator</p>
       <p>Orders Under $40 = + $10.</p>
       <p>Orders Over $40 = FREE Shipping.</p>
@@ -15,9 +15,7 @@
         <input type="text" placeholder="Cost of Order" />
         <button>Calculate</button>
       </div>
+      <p class="total-after-calculation">0</p>
     </div>
-
-
-    <p class="total-after-calculation"></p>
   </body>
 </html>
