--- a/Amazon Clone (Kinda)/amazon-add-to-cart.html
+++ b/Amazon Clone (Kinda)/amazon-add-to-cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="website.css" />
+    <link rel="stylesheet" href="amazon-add-to-cart.css" />
     <title>Javascript Practice</title>
   </head>
   <body>
