🧹 Another Cleaning Up 🧹

--- a/Rock-Paper-Scissor-Project/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor-Project/rock-paper-scissor.html
@@ -9,7 +9,8 @@
   <body>
     <h3>Rock Paper Scissors</h3>
     <div>
-      <img src="stone-casting-throw.gif" alt="bro throwing stones" class="choices">
+      <img src="rockFrame.png" alt="bro throwing stones" class="choices">
+
       <button
         onclick="
           userMove = 'Rock';
@@ -18,6 +19,9 @@
       >
         Rock
       </button>
+
+      <img src="paperFrame.png" alt="bro throwing stones" class="choices">
+
       <button
         onclick="
           userMove = 'Paper'; 
@@ -25,6 +29,9 @@
       >
         Paper
       </button>
+
+      <img src="scissorFrame.png" alt="bro throwing stones" class="choices">
+      
       <button
         onclick="
           userMove = 'Scissors';   
@@ -32,6 +39,7 @@
       >
         Scissors
       </button>
+      
       <button onclick="
         points.Computer = 0;
         points.Tie = 0;
