➿ Adding History Log ➿

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -51,6 +51,12 @@
       Reset Button
     </button>
 
+    <div class="history-container">
+      <h2>History Log</h2>
+      <div class="history-logs-p">
+      </div>
+    </div>
+
     <script src="JS-Javascript-Folder/rock-paper-scissor.js"></script>
   </body>
 </html>
