🫦 Adding font links, adding comments in JS, and grouping redundant properties in CSS 🪨

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -4,52 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS-Folder/rock-paper-scissor.css" />
+    <!-- Font Links  -->
+    <!-- Anton Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <!-- Roboto Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Title -->
     <title>Rock Paper Scissors Game</title>
   </head>
   <body>
-    <h1>Rock Paper Scissors</h1>
-    <h3>Defeat me!</h3>
-    <div>
-      <img class="user-image" src="" alt="" />
-      <img class="computer-image" src="Images-Folder/userImage.png" alt="" />
-    </div>
-    <p class="render-score">Hint: Pick your move and show your prowess!</p>
-    <div class="choices-div">
-      <img
-        onclick=" yourMove = 'Rock'; fightResult(yourMove); scoreStorage();"
-        src="Images-Folder/rockFrame.png"
-        alt="Rock Move"
-        class="choices"
-      />
+    <!-- this is where the game rock, paper, scissor happens -->
+    <div class="the-main-game-rps">
+      <!-- RPS means Rock, Paper, Scissors -->
+      <h1>Rock Paper Scissors</h1>
+      <h3>Defeat me!</h3>
+      <div>
+        <img class="user-image" src="" alt="" />
+        <img class="computer-image" src="Images-Folder/userImage.png" alt="" />
+      </div>
+      <p class="render-score">Hint: Pick your move and show your prowess!</p>
+      <div class="choices-div">
+        <img
+          onclick=" yourMove = 'Rock'; fightResult(yourMove); scoreStorage();"
+          src="Images-Folder/rockFrame.png"
+          alt="Rock Move"
+          class="choices"
+        />
 
-      <img
-        onclick=" yourMove = 'Paper'; fightResult(yourMove); scoreStorage();"
-        src="Images-Folder/paperFrame.png"
-        alt="Paper Move"
-        class="choices"
-      />
+        <img
+          onclick=" yourMove = 'Paper'; fightResult(yourMove); scoreStorage();"
+          src="Images-Folder/paperFrame.png"
+          alt="Paper Move"
+          class="choices"
+        />
 
-      <img
-        onclick=" yourMove = 'Scissors'; fightResult(yourMove); scoreStorage();"
-        src="Images-Folder/scissorFrame.png"
-        alt="Scissor Move"
-        class="choices"
-      />
-    </div>
-    <button
-      onclick="
+        <img
+          onclick=" yourMove = 'Scissors'; fightResult(yourMove); scoreStorage();"
+          src="Images-Folder/scissorFrame.png"
+          alt="Scissor Move"
+          class="choices"
+        />
+      </div>
+      <button
+        onclick="
         points.Computer = 0;
         points.Tie = 0;
         points.User = 0;
         localStorage.removeItem('scoreTotal');
         renderScore('reset', 'reset', 'reset');
-        renderLog();
+        renderHistoryLog();
         scoreStorage();
       "
-      class="reset-button"
-    >
-      Reset Button
-    </button>
+        class="reset-button"
+      >
+        Reset Button
+      </button>
+    </div>
+
+    <!-- our history logs for the previous games     -->
     <div class="history-container">
       <h2>History Log</h2>
       <div class="logs">
@@ -75,9 +91,7 @@
             <p>Computer</p>
           </div>
         </div>
-        <div class="log-container">
-
-        </div>
+        <div class="log-container"></div>
       </div>
       <div><button class="clear-history-button">Clear History</button></div>
     </div>
