❌ Adding and enhancing Reset History Button ❌

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -100,7 +100,7 @@
         <div class="log-container"></div>
       </div>
       <div>
-        <button onclick="clearHistory(); renderHistoryLog();" class="clear-history-button">
+        <button onclick="renderHistoryLog('Reset');" class="clear-history-button">
           Clear History
         </button>
       </div>
