--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -35,40 +35,31 @@
       <p class="render-score">Hint: Pick your move and show your prowess!</p>
       <div class="choices-div">
         <img
-          onclick=" yourMove = 'Rock'; fightResult(yourMove); scoreStorage(); "
           src="Images-Folder/rockFrame.png"
           alt="Rock Move"
-          class="choices"
+          class="choices rockMove"
         />
 
         <img
-          onclick=" yourMove = 'Paper'; fightResult(yourMove); scoreStorage();"
           src="Images-Folder/paperFrame.png"
           alt="Paper Move"
-          class="choices"
+          class="choices paperMove"
         />
 
         <img
-          onclick=" yourMove = 'Scissors'; fightResult(yourMove); scoreStorage();"
           src="Images-Folder/scissorFrame.png"
           alt="Scissor Move"
-          class="choices"
+          class="choices scissorMove"
         />
       </div>
-      <button
-        onclick="
-        points.Computer = 0;
-        points.Tie = 0;
-        points.User = 0;
-        localStorage.removeItem('scoreTotal');
-        renderScore('reset', 'reset', 'reset');
-        fightResult('Reset');
-        scoreStorage();
-      "
-        class="reset-button"
-      >
-        Reset Button
-      </button>
+      <div class="button-container">
+        <button
+          class="buttons reset-button"
+        >
+          Reset Button
+        </button>
+        <button class="buttons auto-play-button">Auto Play</button>
+      </div>
     </div>
 
     <!-- our history logs for the previous games     -->
@@ -100,7 +91,9 @@
         <div class="log-container"></div>
       </div>
       <div>
-        <button onclick="renderHistoryLog('Reset'); historyLogArray.length = 0; historyLogStorage();" class="clear-history-button">
+        <button
+          class="buttons clear-history-button"
+        >
           Clear History
         </button>
       </div>
